# YT-Spammer-Purge

./: pyproject.toml
yt_spammer_purge/: __main__.py
yt_spammer_purge/helpers/: youtube.py
yt_spammer_purge/interfaces/: config.py  exceptions.py  messages.py  scan.py  user.py
