[tool.poetry]
name = "yt_spammer_purge"
version = "2.14.0"
description = "Allows you easily scan for and delete scam comments using several methods."
authors = ["ThioJoe"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
google-api-python-client = "^2.36.0"
requests = "^2.27.1"
rtfunicode = "^2.0"
confusables = "^1.2.0"
rich = "^11.1.0"
protobuf = "^3.19.4"
python-Levenshtein = "^0.12.2"
dacite = "^1.6.0"
xdgconfig = "^1.2.2"

[tool.poetry.dev-dependencies]
pylama = "^8.3.7"
pytest = "^6.2.5"
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
